core/bench/benchwithzlink/baseline/zlink_dist/linux-x64/include/zlink.h

typedef unsigned __int32 uint32_t;
typedef unsigned __int16 uint16_t;
/******************************************************************************/
/*  0MQ message definition.                                                   */
/******************************************************************************/
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
/******************************************************************************/
/*  Service Discovery API                                                     */
/******************************************************************************/

typedef struct {
    char service_name[256];
    char endpoint[256];
    zlink_routing_id_t routing_id;
    uint32_t weight;
    uint64_t registered_at;
} zlink_receiver_info_t;
/** @brief Set the registry unique ID (used for cluster configuration). */
ZLINK_EXPORT int zlink_registry_set_id (void *registry, uint32_t registry_id);
/** @brief Add a peer registry PUB endpoint (for cluster synchronization). */
ZLINK_EXPORT int zlink_registry_add_peer (void *registry,
                                      const char *peer_pub_endpoint);
/**
 * @brief Set heartbeat interval and timeout.
 * @param interval_ms  Heartbeat send interval in milliseconds.
 * @param timeout_ms   Expiry time when no heartbeat is received, in milliseconds.
 */
ZLINK_EXPORT int zlink_registry_set_heartbeat (void *registry,
                                           uint32_t interval_ms,
                                           uint32_t timeout_ms);
/** @brief Set the service list broadcast interval in milliseconds. */
ZLINK_EXPORT int zlink_registry_set_broadcast_interval (void *registry,
                                                    uint32_t interval_ms);
/** @brief Set a socket option on an internal registry socket. */
ZLINK_EXPORT int zlink_registry_setsockopt (void *registry,
                                        int socket_role,
                                        int option,
                                        const void *optval,
                                        size_t optvallen);
/** @brief Start the registry. Spawns an internal thread. */
ZLINK_EXPORT int zlink_registry_start (void *registry);
/** @brief Destroy the registry and release all resources. */
ZLINK_EXPORT int zlink_registry_destroy (void **registry_p);
/** @} */

/**
 * @brief Create a typed Discovery instance.
 *
 * The type is fixed at creation time and cannot be changed.
 * All subscribe/get/count queries operate within the given service_type scope.
 *
 * @param ctx           Context handle.
 * @param service_type  ZLINK_SERVICE_TYPE_GATEWAY or ZLINK_SERVICE_TYPE_SPOT.
 * @return Discovery handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_discovery_new_typed (void *ctx, uint16_t service_type);
/** @brief Connect to a registry PUB endpoint. */
ZLINK_EXPORT int zlink_discovery_connect_registry (
  void *discovery, const char *registry_pub_endpoint);
/** @brief Subscribe to a service name. Receives matching entries from broadcasts. */
ZLINK_EXPORT int zlink_discovery_subscribe (void *discovery,
                                        const char *service_name);
/** @brief Unsubscribe from a service name. */
ZLINK_EXPORT int zlink_discovery_unsubscribe (void *discovery,
                                          const char *service_name);
/**
 * @brief Get the list of receivers for a service.
 * @param[out] providers  Array to receive results.
 * @param[in,out] count   On input, array capacity; on output, actual count.
 */
ZLINK_EXPORT int zlink_discovery_get_receivers (void *discovery,
                                            const char *service_name,
                                            zlink_receiver_info_t *providers,
                                            size_t *count);
/** @brief Return the number of registered receivers for a service. */
ZLINK_EXPORT int zlink_discovery_receiver_count (void *discovery,
                                             const char *service_name);
/** @brief Check if a service is available (at least one receiver exists). */
ZLINK_EXPORT int zlink_discovery_service_available (void *discovery,
                                                const char *service_name);
/** @brief Set a socket option on an internal discovery socket. */
ZLINK_EXPORT int zlink_discovery_setsockopt (void *discovery,
                                         int socket_role,
                                         int option,
                                         const void *optval,
                                         size_t optvallen);
/** @brief Destroy the discovery instance and release all resources. */
ZLINK_EXPORT int zlink_discovery_destroy (void **discovery_p);
/* Gateway ------------------------------------------------------------------ */

/**
 * @brief Create a Gateway.
 *
 * Resolves service locations automatically via Discovery and provides
 * load-balanced request/reply communication.
 *
 * @param ctx         Context handle.
 * @param discovery   Discovery handle (ZLINK_SERVICE_TYPE_GATEWAY type).
 * @param routing_id  Unique identifier for this Gateway.
 * @return Gateway handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_gateway_new (void *ctx,
                                      void *discovery,
                                      const char *routing_id);
/**
 * @brief Send a message to a service (load-balanced).
 * @param service_name  Target service name.
 * @param parts         Multipart message array.
 * @param part_count    Number of parts.
 * @param flags         Send flags (0 or ZLINK_DONTWAIT).
 */
ZLINK_EXPORT int zlink_gateway_send (void *gateway,
                                     const char *service_name,
                                     zlink_msg_t *parts,
                                     size_t part_count,
                                     int flags);
/**
 * @brief Receive a message.
 * @param[out] parts             Received multipart message (caller must free).
 * @param[out] part_count        Number of parts.
 * @param flags                  0 or ZLINK_DONTWAIT.
 * @param[out] service_name_out  Originating service name (256-byte buffer).
 */
ZLINK_EXPORT int zlink_gateway_recv (void *gateway,
                                     zlink_msg_t **parts,
                                     size_t *part_count,
                                     int flags,
                                     char *service_name_out);
/** @brief Send a message directly to a specific Receiver by routing_id. */
ZLINK_EXPORT int zlink_gateway_send_rid (void *gateway,
                                         const char *service_name,
                                         const zlink_routing_id_t *routing_id,
                                         zlink_msg_t *parts,
                                         size_t part_count,
                                     int flags);
/** @} */

/** @brief Set the load-balancing strategy for a service. */
ZLINK_EXPORT int zlink_gateway_set_lb_strategy (void *gateway,
                                                const char *service_name,
                                                int strategy);
/** @brief Set a Gateway socket option. */
ZLINK_EXPORT int zlink_gateway_setsockopt (void *gateway,
                                           int option,
                                           const void *optval,
                                           size_t optvallen);
/** @brief Configure TLS client settings for the Gateway. */
ZLINK_EXPORT int zlink_gateway_set_tls_client (void *gateway,
                                           const char *ca_cert,
                                           const char *hostname,
                                           int trust_system);
/** @brief Return the number of receivers connected for a service. */
ZLINK_EXPORT int zlink_gateway_connection_count (void *gateway,
                                             const char *service_name);
/** @brief Destroy the Gateway and release all resources. */
ZLINK_EXPORT int zlink_gateway_destroy (void **gateway_p);
/* Receiver ----------------------------------------------------------------- */

/**
 * @brief Create a Receiver.
 *
 * Server-side role that receives requests from Gateways and sends replies.
 * Registers services with the Registry for automatic discovery by Gateways.
 *
 * @param ctx         Context handle.
 * @param routing_id  Unique identifier for this Receiver.
 */
ZLINK_EXPORT void *zlink_receiver_new (void *ctx, const char *routing_id);
/** @brief Bind the ROUTER socket to an endpoint. */
ZLINK_EXPORT int zlink_receiver_bind (void *provider,
                                  const char *bind_endpoint);
/** @brief Connect to a Registry ROUTER endpoint (for registration/heartbeat). */
ZLINK_EXPORT int zlink_receiver_connect_registry (void *provider,
                                              const char *registry_endpoint);
/**
 * @brief Register a service with the Registry.
 * @param service_name        Service name.
 * @param advertise_endpoint  Endpoint that Gateways will connect to.
 * @param weight              Load-balancing weight.
 */
ZLINK_EXPORT int zlink_receiver_register (void *provider,
                                      const char *service_name,
                                      const char *advertise_endpoint,
                                      uint32_t weight);
/** @brief Update the weight of a registered service. */
ZLINK_EXPORT int zlink_receiver_update_weight (void *provider,
                                           const char *service_name,
                                           uint32_t weight);
/** @brief Unregister a service. */
ZLINK_EXPORT int zlink_receiver_unregister (void *provider,
                                        const char *service_name);
/**
 * @brief Query the registration result (async registration confirmation).
 * @param[out] status             Registration status code.
 * @param[out] resolved_endpoint  Endpoint resolved by the Registry (256-byte buffer).
 * @param[out] error_message      Error message (256-byte buffer).
 */
ZLINK_EXPORT int zlink_receiver_register_result (void *provider,
                                             const char *service_name,
                                             int *status,
                                             char *resolved_endpoint,
                                             char *error_message);
/** @brief Set TLS server certificate. */
ZLINK_EXPORT int zlink_receiver_set_tls_server (void *provider,
                                            const char *cert,
                                            const char *key);
/** @brief Set a socket option on an internal Receiver socket. */
ZLINK_EXPORT int zlink_receiver_setsockopt (void *provider,
                                        int socket_role,
                                        int option,
                                        const void *optval,
                                        size_t optvallen);
/** @brief Destroy the Receiver and release all resources. */
ZLINK_EXPORT int zlink_receiver_destroy (void **provider_p);
/******************************************************************************/
/*  SPOT PUB/SUB API                                                          */
/******************************************************************************/

/* SPOT Node --------------------------------------------------------------- */

/** @brief Create a SPOT node. Manages PUB/SUB/DEALER sockets for topic messaging. */
ZLINK_EXPORT void *zlink_spot_node_new (void *ctx);
/** @brief Destroy a SPOT node and release all resources. */
ZLINK_EXPORT int zlink_spot_node_destroy (void **node_p);
/** @brief Bind the SPOT node to an endpoint. */
ZLINK_EXPORT int zlink_spot_node_bind (void *node, const char *endpoint);
/** @brief Connect to a Registry endpoint for service registration. */
ZLINK_EXPORT int zlink_spot_node_connect_registry (void *node,
                                               const char *registry_endpoint);
/******************************************************************************/
/*  Scheduling timers                                                         */
/******************************************************************************/
typedef void (zlink_timer_fn) (int timer_id, void *arg);
typedef void (zlink_thread_fn) (void *);