bindings/dotnet/src/Zlink/Native/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_set_id(IntPtr registry,
        uint registryId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_add_peer(IntPtr registry,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string peerPubEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_set_heartbeat(IntPtr registry,
        uint intervalMs, uint timeoutMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_set_broadcast_interval(
        IntPtr registry, uint intervalMs);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_start(IntPtr registry);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_destroy(ref IntPtr registry);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_discovery_new_typed(IntPtr ctx,
        ushort serviceType);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_connect_registry(
        IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string registryPubEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_subscribe(IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_unsubscribe(IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_get_receivers(IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [In, Out] ZlinkProviderInfo[] providers, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_receiver_count(IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_service_available(
        IntPtr discovery,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_destroy(ref IntPtr discovery);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_gateway_new(IntPtr ctx,
        IntPtr discovery, [MarshalAs(UnmanagedType.LPUTF8Str)] string? routingId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_send(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [In] ZlinkMsg[] parts, nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        ZlinkMsg* parts, nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send(IntPtr gateway,
        byte* serviceName, ZlinkMsg* parts, nuint partCount, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_send_rid(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [In] ref ZlinkRoutingId routingId, [In] ZlinkMsg[] parts,
        nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send_rid",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send_rid(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        ZlinkRoutingId* routingId, ZlinkMsg* parts, nuint partCount, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send_rid",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send_rid(IntPtr gateway,
        byte* serviceName, ZlinkRoutingId* routingId, ZlinkMsg* parts,
        nuint partCount, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_send_bytes(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        IntPtr data, nuint size, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send_bytes",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send_bytes(IntPtr gateway,
        byte* serviceName, byte* data, nuint size, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_send_rid_bytes(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [In] ref ZlinkRoutingId routingId, IntPtr data, nuint size, int flags);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_send_rid_bytes",
        CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_send_rid_bytes(
        IntPtr gateway, byte* serviceName, ZlinkRoutingId* routingId,
        byte* data, nuint size, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_gateway_recv(IntPtr gateway,
        out IntPtr parts, out nuint partCount, int flags, byte* serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_set_lb_strategy(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName, int strategy);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_set_tls_client(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string caCert,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hostname, int trustSystem);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_connection_count(IntPtr gateway,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_setsockopt(IntPtr gateway,
        int option, IntPtr value, nuint length);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_gateway_router_socket_unsafe(
        IntPtr gateway);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_router_peers(IntPtr gateway,
        [In, Out] ZlinkPeerInfo[] peers, ref nuint count);

    [DllImport(LibraryName, EntryPoint = "zlink_gateway_router_peers",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_router_peers(IntPtr gateway,
        IntPtr peers, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_gateway_destroy(ref IntPtr gateway);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_receiver_new(IntPtr ctx,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? routingId);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_bind(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string bindEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_connect_registry(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string registryEndpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_register(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string advertiseEndpoint,
        uint weight);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_update_weight(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName, uint weight);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_unregister(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static unsafe extern int zlink_receiver_register_result(
        IntPtr receiver, [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        out int status, byte* resolvedEndpoint, byte* errorMessage);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_set_tls_server(IntPtr receiver,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string cert,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string key);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_receiver_router_socket_unsafe(IntPtr receiver);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_router_peers(IntPtr receiver,
        [In, Out] ZlinkPeerInfo[] peers, ref nuint count);

    [DllImport(LibraryName, EntryPoint = "zlink_receiver_router_peers",
        CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_router_peers(IntPtr receiver,
        IntPtr peers, ref nuint count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_setsockopt(IntPtr receiver, int role,
        int option, IntPtr value, nuint length);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_registry_setsockopt(IntPtr registry, int role,
        int option, IntPtr value, nuint length);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_discovery_setsockopt(IntPtr discovery, int role,
        int option, IntPtr value, nuint length);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_receiver_destroy(ref IntPtr receiver);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr zlink_spot_node_new(IntPtr ctx);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_destroy(ref IntPtr node);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_bind(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string endpoint);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_node_connect_registry(IntPtr node,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string registryEndpoint);
